tests/fixtures/csend.out
info: Typechecking...
error: Union member NilClass does not respond to #+

        @ __ROOT__/tests/fixtures/csend.rb:8
      8 |    x&.length + 1
             ^^^^^^^^^ NilClass | Integer

error: Conditional-send on a non-nillable receiver

        @ __ROOT__/tests/fixtures/csend.rb:11
     11 |    "hi"&.length
             ^^^^ receiver
        @ __ROOT__/tests/fixtures/csend.rb:11
     11 |    "hi"&.length
             ^^^^^^^^^^^^ in this invocation
